RESOLVED FIXED68815
fast/dom/scroll-element-to-rect.html fails on WK1 Mac port
https://bugs.webkit.org/show_bug.cgi?id=68815
Summary fast/dom/scroll-element-to-rect.html fails on WK1 Mac port
Ryosuke Niwa
Reported 2011-09-26 10:49:36 PDT
The following tests added by http://trac.webkit.org/changeset/95890 are failing on Mac WK1 port: fast/dom/scroll-element-to-rect.html fast/dom/scroll-element-to-rect-centered.html
Attachments
Patch (4.68 KB, patch)
2011-09-28 17:14 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-09-28 16:49:03 PDT
I think this is broken in WK1 because Element::boundsInWindowSpace() returns rect in flipped coordinates in WK1. "in window space" is not something that should be used in WebCore code much.
Simon Fraser (smfr)
Comment 2 2011-09-28 16:50:42 PDT
Actually FrameView::scrollElementToRect() should not be using 'boundsInWindowSpace'. I think getRect() would work just fine.
Simon Fraser (smfr)
Comment 3 2011-09-28 17:14:20 PDT
Simon Fraser (smfr)
Comment 4 2011-09-28 17:44:39 PDT
Varun Jain
Comment 5 2011-10-03 11:42:21 PDT
(In reply to comment #4) > http://trac.webkit.org/changeset/96278 Thanks Simon! for fixing this Apologies for the delay as I could not get hold of a machine to repro the failure in time :(
Note You need to log in before you can comment on or make changes to this bug.