fast/dom/scroll-element-to-rect.html fails on WK1 Mac port https://bugs.webkit.org/show_bug.cgi?id=68815

Source/WebCore:

Reviewed by Dan Bernstein.

FrameView::scrollElementToRect() was incorrectly using Element::boundsInWindowSpace(),
which is window-relative (not web view-relative), and has flipped coordinates
in WebKit1.

Change to use Node::getRect() which is what the author intended.

* dom/Element.h:
* page/FrameView.cpp:
(WebCore::FrameView::scrollElementToRect):

LayoutTests:

Reviewed by Dan Bernstein.

Fix these tests to not throw errors when window.internals is not available.

* fast/dom/scroll-element-to-rect-centered.html:
* fast/dom/scroll-element-to-rect.html:

Canonical link: https://commits.webkit.org/85045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96278 268f45cc-cd09-0410-ab3c-d52691b4dbfc