Source/WebCore/dom/Element.h
@@ -166,6 +166,7 @@ public:
     virtual int scrollWidth();
     virtual int scrollHeight();
 
+    // Note that the 'window space' has a flipped coordinate system on some platforms.
     LayoutRect boundsInWindowSpace();
 
     PassRefPtr<ClientRectList> getClientRects();
